# azure-keyvault-encryption-test

./: CMakeLists.txt  Cargo.toml  README.md  vcpkg.json
decrypt/: Cargo.toml
decrypt/src/: main.rs
encrypt/: CMakeLists.txt  azure-encrypt.cpp
